# document_translator_v14

./: .gitignore  BEFORE_AFTER_COMPARISON.md  CHROMADB_V06_MIGRATION_GUIDE.md  CLAUDE.md  DEPENDENCY_INSTALLATION_COMPLETE.md  DOCLING_API_MIGRATION_NOTES.md  DOCLING_API_QUICK_FIX.txt  DOCLING_FIX_INDEX.md  DOCLING_TO_DOCLAYOUT_DECISION_RATIONALE.md  END_TO_END_TEST_REPORT_2025-11-15.md  EXTRACTION_TEST_REPORT.md  FINDINGS_SUMMARY.txt  GPU_ACCELERATION_IMPLEMENTATION_SUMMARY.md  GPU_IMPLEMENTATION_CHECKLIST.md  GPU_QUICK_START.md  GUI_VIEWER_MIGRATION_COMPLETE.md  HANDOFF_EQUATION_MERGE_CLARIFICATION.md  HANDOFF_TO_WEB_CLAUDE.md  HARDWARE_CONFIGURATION.md  HOW_TO_USE_PIPELINE_AI.md  IMPORT_CLEANUP_COMPLETE.md  IMPORT_CLEANUP_PLAN.md  IMPORT_FIX_SUMMARY.md  IMPORT_MIGRATION_REPORT.md  IMPORT_PATH_MIGRATION_PLAN.md  INSTALLATION.md  INTEGRATION_TEST_FIXES_SUMMARY.md  INTEGRATION_TEST_FIX_REPORT.txt  INTEGRATION_TEST_GUIDE.md  INTEGRATION_TEST_PLAN.md  INTEGRATION_TEST_RESULTS.md  MIGRATION_STATUS_COMPREHENSIVE.md  ORCHESTRATOR.md  PHASE1_COMPLETION_SUMMARY.md  PHASE1_TEST_RESULTS.md  PHASE1_VALIDATION_TEST.md  PHASE2_COMPLETION_SUMMARY.md  PHASE2_VALIDATION_TEST.md  PHASE_10_COMPLETE_SUMMARY.md  PHASE_10_MIGRATION_PLAN.md  (+128 more)
analysis_tools_v14_P9/: __init__.py
analysis_validation_v14_P19/: __init__.py
batch_results/: BATCH_1_COMPLETE_REPORT.md  BATCH_1_TIMING_REPORT.md
cli_v14_P7/: __init__.py
curation_v14_P3/: README.md
detection_v14_P14/: __init__.py
docs/: CHROMADB_TO_PINECONE_MIGRATION.md  COMPONENT_MIGRATION_MAPPING.md  CONFIGURATION_MIGRATION_MAPPING.md  DETAILED_V13_COMPONENT_MAPPING.md  DOCUMENTATION_MIGRATION_MAPPING.md  GIT_BRANCH_STRATEGY.md  MIGRATION_SAFETY_CHECKLIST.md
extraction_v14_P1/: README.md
(+285 files in other folders)
