[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-translator-v14"
version = "14.0.0"
description = "Document translation and extraction system with vertical pipeline architecture"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Document Translator Team"}
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[tool.setuptools]
packages = { find = { where = ["."], include = [
    # Extraction pipeline packages
    "pipelines.extraction.packages.*",
    # RAG ingestion pipeline packages
    "pipelines.rag_ingestion.packages.*",
    # Data management pipeline packages
    "pipelines.data_management.packages.*",
    # Shared foundation packages
    "pipelines.shared.packages.*",
] } }

[tool.setuptools.package-dir]
"" = "."

# Python path configuration to find all packages
[tool.setuptools.packages.find]
where = ["."]
include = [
    "pipelines.*",
]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
